
Fixed issue with divide-by-zero errors in the ambient super-sampling
routine discovered by Jon Sargent of Solemma.  This affected regions
that had zero radiance, such as black backgrounds or unlit areas
with -av 0 0 0, when super-sampling was effectively disabled, causing
some loss in accuracy of the results.

Updated Klems Half- and Quarter-bases to match angles currently used
in WINDOW.

Eliminated most aiming failures for triangular light sources, at the
expense of conservative sampling near the centroid.  Thanks to
David Geisler-Moroder for his help on this.

Increased maximum set size to 8191 to avoid set overflow errors.

Added source obstruction test to statistics being kept on which
sources were visible in adaptive shadow testing code.  Previous
behavior was likely over-estimating source contributions.

Added diffuse components into maximum directional hemispherical
reported by checkBSDF, so comparing to 100% is easier for each
component.

Fixed incorrect calculations in iso2klems script, thanks to
help from Jacob Jonnson.

Updated official copyright and license according to new wording
provided by Jean Haemmerle at the LBNL Intellectual Property Office.
Both were copied verbatim from e-mail I received from Taoning Wang
on 8/20/2022.

Added -features option to rpict, rtrace, and rcontrib to check
which features are present or look for specific feature support.
This addition was suggested by Peter Apian-Bennewitz as an easier
way to determine which version of Radiance is installed and what
it supports, and is timely as we begin our refactoring of the
rendering code.  There are no current plans to add this to rvu.

Added falsecolor -odim, -orct, and -c0 options to overlay grid of
values on image.  This was requested by Rob Shakespeare.

Added -i* and -o* options in rhcopy for reading rays from the
standard input and writing rays from holodeck to standard output.
This will hopefully be useful in combining rholo with rcontrib.